--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head
     <meta charset="utf-8">
-    <title>SNAKE</title>
+    <title>JS</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://yastatic.net/jquery/2.1.4/jquery.min.js"></script>
     <script src="engine.js"></script>
   </head>
   <body>
-    <canvas id="map"></canvas>
+    <canvas id="field" width="240" height="400"></canvas>
   </body>
 </html>
+
