--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>JS</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://yastatic.net/jquery/2.1.4/jquery.min.js"></script>
     <script src="engine.js"></script>
   </head>
   <body>
-    <canvas id="field" width="240" height="400"></canvas>
+    <canvas id="field"></canvas>
+    <script>init()</script>
   </body>
 </html>
-
